fix: 🎨 small fixes on mobile

--- a/src/components/item-info/index.module.scss
+++ b/src/components/item-info/index.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   flex-direction: row;
+  flex-wrap: wrap;
   font-size: $font-body;
   justify-content: space-between;
   margin-top: 10px;
